--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,8 @@ textarea.form-control {
 
 /* Site Header */
 .site-header {
-  padding: 3em 30px;
+  padding: 0.5em 30px;
+  border-bottom: 1px solid #bbb;
   position: absolute;
   top: 0;
   z-index: 900;
@@ -174,6 +175,10 @@ textarea.form-control {
   color: #000;
   font-size: 30px;
   font-weight: bold;
+}
+
+.site-header ul {
+  margin-bottom: 0px !important;
 }
 
 .site-header .social li {
@@ -191,7 +196,6 @@ textarea.form-control {
 
 .site-header.scrolled {
   position: fixed;
-  padding: 1em 30px;
   top: 0;
   background: #fff;
   -webkit-transition: .0s all ease;
